added id attributes to divs

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <body>
         <h1>Simple Tic-Tac-Toe</h1>
         <span>
-            <div>X</div>
-            <div>X</div>
-            <div>O</div>
+            <div id="a1">X</div>
+            <div id="a2">X</div>
+            <div id="a3">O</div>
         </span>
         <span>
-            <div>O</div>
-            <div>O</div>
-            <div>X</div>
+            <div id="b1">O</div>
+            <div id="b2">O</div>
+            <div id="b3">X</div>
         </span>
         <span>
-            <div>X</div>
-            <div>O</div>
-            <div>X</div>
+            <div id="c1">X</div>
+            <div id="c2">O</div>
+            <div id="c3">X</div>
         </span>
 
     </body>
