--- a/index.html
+++ b/index.html
@@ -24,6 +24,41 @@
             <div id="c2">O</div>
             <div id="c3">X</div>
         </span>
-
     </body>
+    <script>
+       function chngMark() {
+        let tileOneToNine = Math.floor(Math.random() * 8);
+        switch(tileOneToNine) {
+            case 0:
+                document.getElementById("a1").innerHTML = "A";
+                break;
+            case 1:
+                document.getElementById("a2").innerHTML = "A";
+                break;
+            case 2:
+                document.getElementById("a3").innerHTML = "A";
+                break;
+            case 3:
+                document.getElementById("b1").innerHTML = "A";
+                break;
+
+            case 4:
+                document.getElementById("b2").innerHTML = "A";
+                break;
+            case 5:
+                document.getElementById("b3").innerHTML = "A";
+                break;
+            case 6:
+                document.getElementById("c1").innerHTML = "A";
+                break;
+            case 7:
+                document.getElementById("c2").innerHTML = "A";
+                break;
+            case 8:
+                document.getElementById("c3").innerHTML = "A";
+                break;
+            }
+       }  
+       chngMark();
+    </script>
 </html>
