--- a/index.html
+++ b/index.html
@@ -30,35 +30,39 @@
     </body>
     <script>
        function chngMark() {
+        let mark = "";
         let tileOneToNine = Math.floor(Math.random() * 9);
+        let XorY = Math.floor(Math.random() * 2);
+        if(XorY ==0) {mark = "X";}
+        else {mark = "O";}
         switch(tileOneToNine) {
             case 0:
-                document.getElementById("a1").innerHTML = "A";
+                document.getElementById("a1").innerHTML = mark;
                 break;
             case 1:
-                document.getElementById("a2").innerHTML = "A";
+                document.getElementById("a2").innerHTML = mark;
                 break;
             case 2:
-                document.getElementById("a3").innerHTML = "A";
+                document.getElementById("a3").innerHTML = mark;
                 break;
             case 3:
-                document.getElementById("b1").innerHTML = "A";
+                document.getElementById("b1").innerHTML = mark;
                 break;
 
             case 4:
-                document.getElementById("b2").innerHTML = "A";
+                document.getElementById("b2").innerHTML = mark;
                 break;
             case 5:
-                document.getElementById("b3").innerHTML = "A";
+                document.getElementById("b3").innerHTML = mark;
                 break;
             case 6:
-                document.getElementById("c1").innerHTML = "A";
+                document.getElementById("c1").innerHTML = mark;
                 break;
             case 7:
-                document.getElementById("c2").innerHTML = "A";
+                document.getElementById("c2").innerHTML = mark;
                 break;
             case 8:
-                document.getElementById("c3").innerHTML = "A";
+                document.getElementById("c3").innerHTML = mark;
                 break;
             }
        }  
