increased font and button size

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
         <style>
             span {
                 display: inline-block;
+                padding: 30px;;
+            }
+            div {
+                font-size: 40px;
+            }
+            button {
+                height: 100px;
+                width: 400px;
+                font-size: 50px;
             }
         </style>
     </head>
