--- a/index.html
+++ b/index.html
@@ -27,23 +27,51 @@
         <button onclick="chngMark()">Time Warp</button>
         </header>
         <span>
-            <div id="a1"></div>
-            <div id="a2"></div>
-            <div id="a3"></div>
+            <div id="a1" onclick="addMarkA1()"></div>
+            <div id="a2" onclick="addMarkA2()"></div>
+            <div id="a3" onclick="addMarkA3()"></div>
         </span>
         <span>
-            <div id="b1"></div>
-            <div id="b2"></div>
-            <div id="b3"></div>
+            <div id="b1" onclick="addMarkB1()"></div>
+            <div id="b2" onclick="addMarkB2()"></div>
+            <div id="b3" onclick="addMarkB3()"></div>
         </span>
         <span>
-            <div id="c1"></div>
-            <div id="c2"></div>
-            <div id="c3"></div>
+            <div id="c1" onclick="addMarkC1()"></div>
+            <div id="c2" onclick="addMarkC2()"></div>
+            <div id="c3" onclick="addMarkC3()"></div>
         </span>
     </body>
     <script>
-       function chngMark() {
+        function addMarkA1() {
+            document.getElementById("a1").innerHTML = "X";
+        }
+        function addMarkA2() {
+            document.getElementById("a2").innerHTML = "X";
+        }
+        function addMarkA3() {
+            document.getElementById("a3").innerHTML = "X";
+        }
+        function addMarkB1() {
+            document.getElementById("b1").innerHTML = "X";
+        }
+        function addMarkB2() {
+            document.getElementById("b2").innerHTML = "X";
+        }
+        function addMarkB3() {
+            document.getElementById("b3").innerHTML = "X";
+        }
+        function addMarkC1() {
+            document.getElementById("c1").innerHTML = "X";
+        }
+        function addMarkC2() {
+            document.getElementById("c2").innerHTML = "X";
+        }
+        function addMarkC3() {
+            document.getElementById("c3").innerHTML = "X";
+        }
+
+        function chngMark() {
         let mark = "";
         let tileOneToNine = Math.floor(Math.random() * 9);
         let XorY = Math.floor(Math.random() * 2);
