added 2 more levels for 3D play

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h1>Simple Tic-Tac-Toe</h1>
         <button onclick="chngMark()">Time Warp</button>
         </header>
+        <section>Level One
         <span>
             <div id="a1" onclick="addMarkA1()"></div>
             <div id="a2" onclick="addMarkA2()"></div>
@@ -41,6 +42,44 @@
             <div id="c2" onclick="addMarkC2()"></div>
             <div id="c3" onclick="addMarkC3()"></div>
         </span>
+        </section>
+
+        <section>Level Two
+            <span>
+                <div id="a1" onclick="addMarkA1()"></div>
+                <div id="a2" onclick="addMarkA2()"></div>
+                <div id="a3" onclick="addMarkA3()"></div>
+            </span>
+            <span>
+                <div id="b1" onclick="addMarkB1()"></div>
+                <div id="b2" onclick="addMarkB2()"></div>
+                <div id="b3" onclick="addMarkB3()"></div>
+            </span>
+            <span>
+                <div id="c1" onclick="addMarkC1()"></div>
+                <div id="c2" onclick="addMarkC2()"></div>
+                <div id="c3" onclick="addMarkC3()"></div>
+            </span>
+            </section>
+            
+            <section>Level Three
+                <span>
+                    <div id="a1" onclick="addMarkA1()"></div>
+                    <div id="a2" onclick="addMarkA2()"></div>
+                    <div id="a3" onclick="addMarkA3()"></div>
+                </span>
+                <span>
+                    <div id="b1" onclick="addMarkB1()"></div>
+                    <div id="b2" onclick="addMarkB2()"></div>
+                    <div id="b3" onclick="addMarkB3()"></div>
+                </span>
+                <span>
+                    <div id="c1" onclick="addMarkC1()"></div>
+                    <div id="c2" onclick="addMarkC2()"></div>
+                    <div id="c3" onclick="addMarkC3()"></div>
+                </span>
+                </section>
+        
     </body>
     <script>
         function addMarkA1() {
