--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <header>
         <h1>Simple Tic-Tac-Toe</h1>
         <button onclick="chngMark()">Time Warp</button>
+        <p id="final-notice"></p>
         </header>
         <section>Level One
         <span>
@@ -83,6 +84,17 @@
     </body>
     <script>
         const gridPlace = ["1", "2", "3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27"];
+        const winCombos = [
+            [1,2,3,4,5,6,7,8,9],
+            [10,11,12,13,14,15,16,17,18],
+            [19,20,21,22,23,24,25,26,27],
+            [1,2,3,10,11,12,19,20,21],
+            [4,5,6,13,14,15,22,23,24],
+            [7,8,9,16,17,18,25,26,27],
+            [1,4,7,10,13,16,19,22,25],
+            [2,5,8,11,14,17,20,23,26],
+            [3,6,9,12,15,18,21,24,27]
+        ]
         let gridMrk = "";
 
         function addMark(inMark) {
@@ -97,7 +109,7 @@
                 }
             }
         
-            if (counter < 27) {computerMove();}
+            if (counter < 27) {computerMove(); winLose();}
     }
         function computerMove() {
             let checkSpace = "";
@@ -119,6 +131,19 @@
             else {mark = "O";}
             document.getElementById(gridPlace[randomSpace]).innerHTML = mark;
         }
+        }
+        function winLose() {
+            for(let k = 0; k < 9; k++) {
+                let winFlag = 0;
+                for(let m = 0; m < 9; m++) {
+                    let checkWin = document.getElementById(winCombos[k][m]).innerHTML;
+                    console.log(checkWin);
+                    if(checkWin == "X"){winFlag = 1;}
+                    else if(checkWin == "O"){winFlag = 2}
+                    else {winFlag = 0;}
+                    document.getElementById("final-notice").innerHTML = "WINNER";
+                }
+            }
         }
     </script>
 </html>
